# rust-game-hosting-server

./: .gitignore  Cargo.toml  README.md  config.json  hello.html  screenlog.0
arma/: start.sh  stop.sh  update.js
minecraft/: eula.txt  ops.json  server.properties  start.sh  status.sh  stop.sh  update.js  usercache.json
minecraft/Matousuv Bengr Svet/: level.dat_old
minecraft/Matousuv Bengr Svet/advancements/: 186024b0-a186-3e27-bba6-49a308100ef8.json  98dee4d8-1bd6-334a-ad1f-d04e2132a139.json  b1ad6121-6475-3104-beac-bdf4c4d160eb.json
minecraft/Matousuv Bengr Svet/entities/: r.-1.-1.mca  r.-1.-2.mca  r.-1.0.mca  r.-1.1.mca  r.-1.2.mca  r.-1.3.mca  r.-1.4.mca  r.-1.5.mca  r.-1.6.mca  r.0.-1.mca  r.0.-2.mca  r.0.0.mca  r.0.1.mca  r.0.2.mca  r.0.3.mca  r.0.4.mca  r.0.5.mca  r.0.6.mca  r.1.-1.mca  r.1.0.mca  r.1.1.mca
minecraft/Matousuv Bengr Svet/playerdata/: 186024b0-a186-3e27-bba6-49a308100ef8.dat_old  98dee4d8-1bd6-334a-ad1f-d04e2132a139.dat_old  b1ad6121-6475-3104-beac-bdf4c4d160eb.dat_old
minecraft/Matousuv Bengr Svet/poi/: r.-1.0.mca  r.-1.1.mca  r.-1.4.mca  r.-1.5.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca  r.0.4.mca  r.0.5.mca  r.1.-1.mca  r.1.0.mca  r.1.1.mca
minecraft/Matousuv Bengr Svet/region/: r.-1.-2.mca  r.-1.2.mca  r.-1.3.mca  r.-2.4.mca  r.-2.5.mca  r.-2.6.mca  r.0.-2.mca  r.1.-2.mca  r.1.2.mca  r.1.3.mca  r.1.4.mca  r.1.5.mca
minecraft/Matousuv Bengr Svet/stats/: 186024b0-a186-3e27-bba6-49a308100ef8.json  (+2 more)
src/: lib.rs  main.rs
src/hostable_servers/: arma.rs  minecraft.rs  mod.rs  run_in_screen.sh
src/http/: mod.rs
(+10 files in other folders)
